# nvidia-fand

./: README.md  meson.build
include/app/: app.hh  fan_settings.hh  util.hh
src/: main.cc
src/app/: app.cc
